--- a/pages/assignments.html
+++ b/pages/assignments.html
@@ -150,7 +150,7 @@
         @media all and (max-width:320px) {
             body>main>section {
                 grid-template-columns: 1fr;
-                grid-template-rows: repeat(14, 1fr);
+                grid-template-rows: repeat(15, 1fr);
             }
 
             body>header>div>h2 {
@@ -161,7 +161,7 @@
         @media all and (min-width:320px) and (max-width:375px) {
             body>main>section {
                 grid-template-columns: 1fr;
-                grid-template-rows: repeat(14, 1fr);
+                grid-template-rows: repeat(15, 1fr);
             }
 
             body>header>div>h2 {
@@ -172,7 +172,7 @@
         @media all and (min-width:375px) and (max-width:425px) {
             body>main>section {
                 grid-template-columns: 1fr;
-                grid-template-rows: repeat(14, 1fr);
+                grid-template-rows: repeat(15, 1fr);
             }
 
             body>header>div>h2 {
@@ -183,7 +183,7 @@
         @media all and (min-width:425px) and (max-width:768px) {
             body>main>section {
                 grid-template-columns: repeat(2, 1fr);
-                grid-template-rows: repeat(7, 1fr);
+                grid-template-rows: repeat(8, 1fr);
             }
 
             body>header>div>h2 {
@@ -322,6 +322,15 @@
                 <h4>Animation Case 4</h4>
                 <div></div>
                 <a href="../assignments/CSS/animation/Case 4/index.html" target="_blank">
+                    <button>Check It Out</button>
+                </a>
+            </div>
+            <div>
+                <!-- <img src="assets/images/animation case 3.jpg" alt="image of animation case 2"> -->
+                <video src="assets/videos/bootstrap ui shop.webm" muted autoplay loop></video>
+                <h4>UI of a shop using Bootstrap</h4>
+                <div></div>
+                <a href="../assignments/CSS Framework/Pos/placeOrder.html" target="_blank">
                     <button>Check It Out</button>
                 </a>
             </div>
