--- a/assignments/JS/QUE/index.html
+++ b/assignments/JS/QUE/index.html
@@ -7,44 +7,45 @@
     <meta content="width=device-width initial-scale=1" name="viewport">
     <link rel="stylesheet" href="normalize.css">
     <style>
+        body{
+            background-color: #36474F;
+        }
         div {
             position: relative;
             display: inline-block;
-            /* border: 1px solid black; */
+            border-radius: 10px;
+            width: 150px;
+            height: 60px;
+            margin-right: 10px;
+            background-color: white;
         }
-
+        div:last-of-type {
+            margin-right: 0px;
+        }
         div:first-child {
-            width: 200px;
-            height: 80px;
         }
-
-        div:nth-child(2) {
-            width: 200px;
-            height: 80px;
-            top: 80px;
-        }
-
         div:nth-child(3) {
-            width: 200px;
-            height: 80px;
-            top: 80px;
+            margin-left: 200px;
         }
-
         div:nth-child(4) {
-            width: 200px;
-            height: 80px;
-            top: 80px;
-        }
 
+        }
         div:nth-child(5) {
-            width: 200px;
-            height: 80px;
-            top: 160px;
-        }
 
-        section {
+        }
+        div:nth-child(6) {
+
+        }
+        div:nth-child(8) {
+            margin-left: 880px;
+        }
+        hr{
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+        body>section {
             width: max-content;
-            height: 240px;
+            height: max-content;    
             position: absolute;
             margin: auto;
             top: 0;
@@ -53,6 +54,22 @@
             right: 0;
             font-size: 0;
         }
+        body>section>section{
+            width: 100%;
+            height: 40px;
+            margin-top: 30px;
+            text-align: center;
+        }
+        button{           
+            width: 150px;
+            height: 100%;
+            border-radius: 10px;
+            margin: 5px;
+            background-color: rgb(240, 255, 246);
+            color: black;
+            font-size: 14px;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
     </style>
 
 </head>
@@ -60,17 +77,27 @@
 <body>
     <section>
         <div></div>
+        <hr>
         <div></div>
         <div></div>
         <div></div>
         <div></div>
+        <hr>
+        <div></div>
+        <br>
+        <section>
+            <button id="startBtn" >Start</button>
+            <button id="stopBtn" >Stop</button>
+        </section>
     </section>
 
     <script>
-        let colors = ["blue", "green", "aquamarine", "yellow", "red"];
+        let colors = ["blue", "green", "aquamarine", "yellow", "red","pink"];
         let divs = document.querySelectorAll("div");
+        let interval;
 
-        setInterval(
+        function startInterval(){
+            interval = setInterval(
             function () {
                 var lastColor = colors.pop();
                 colors.unshift(lastColor);
@@ -79,6 +106,18 @@
                 }
             }, 300
         );
+        }
+
+        startInterval();
+
+        document.getElementById("startBtn").addEventListener("click",function(){
+            clearInterval(interval);
+            startInterval();
+        });
+
+        document.getElementById("stopBtn").addEventListener("click",function(){
+            clearInterval(interval);
+        });
 
 
 
