--- a/pages/assignments.html
+++ b/pages/assignments.html
@@ -150,7 +150,7 @@
         @media all and (max-width:320px) {
             body>main>section {
                 grid-template-columns: 1fr;
-                grid-template-rows: repeat(16, 1fr);
+                grid-template-rows: repeat(18, 1fr);
             }
 
             body>header>div>h2 {
@@ -161,7 +161,7 @@
         @media all and (min-width:320px) and (max-width:375px) {
             body>main>section {
                 grid-template-columns: 1fr;
-                grid-template-rows: repeat(16, 1fr);
+                grid-template-rows: repeat(18, 1fr);
             }
 
             body>header>div>h2 {
@@ -172,7 +172,7 @@
         @media all and (min-width:375px) and (max-width:425px) {
             body>main>section {
                 grid-template-columns: 1fr;
-                grid-template-rows: repeat(16, 1fr);
+                grid-template-rows: repeat(18, 1fr);
             }
 
             body>header>div>h2 {
@@ -183,7 +183,7 @@
         @media all and (min-width:425px) and (max-width:768px) {
             body>main>section {
                 grid-template-columns: repeat(2, 1fr);
-                grid-template-rows: repeat(8, 1fr);
+                grid-template-rows: repeat(9, 1fr);
             }
 
             body>header>div>h2 {
@@ -340,6 +340,22 @@
                 <h4>Single Page POS UI</h4>
                 <div></div>
                 <a href="../assignments/JS/SPA/index.html" target="_blank">
+                    <button>Check It Out</button>
+                </a>
+            </div>
+            <div>
+                <video src="assets/videos/que.webm" muted autoplay loop></video>
+                <h4>QUE</h4>
+                <div></div>
+                <a href="../assignments/JS/QUE/index.html" target="_blank">
+                    <button>Check It Out</button>
+                </a>
+            </div>
+            <div>
+                <video src="assets/videos/knight rider.webm" muted autoplay loop></video>
+                <h4>Knight Rider Light</h4>
+                <div></div>
+                <a href="../assignments/JS/KNIGHT/index.html" target="_blank">
                     <button>Check It Out</button>
                 </a>
             </div>
