added loading gif

--- a/index.html
+++ b/index.html
@@ -5006,7 +5006,7 @@
     <script src="assets/resources/js/jquery-3.7.1.min.js"></script>
     <script>
         $(window).on('load',function(){
-            $("#loading_section").css("display","none");
+            // $("#loading_section").css("display","none");
             $("#loading_section").fadeOut(1000);
         })
     </script>
